--- a/PIRESQuestions/PIRESQuestions/Views/Shared/_Layout.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Shared/_Layout.cshtml
@@ -26,10 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Gender" asp-action="Index">Gender</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Country" asp-action="Index">Country</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DataDashboard" asp-action="Index">Data-Dashboard</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
