--- a/PIRESQuestions/PIRESQuestions/Views/Shared/_createQuestion.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Shared/_createQuestion.cshtml
@@ -13,6 +13,28 @@
             <input type="text" asp-for="Description" class="form-control" id="inputDescription" placeholder="Saisissez la description...">
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
-        <button class="btn btn-info">Envoyer via Ajax</button>
+        <button id="callCreateChoice" class="btn btn-info">Ajouter Choix</button>
+        @if (Model != null)
+        {
+            <div id="divCreateChoice">
+                <partial name="_createChoice" model="Model.Choices" />
+            </div>
+        }
+        <button class="btn btn-info">Envoyer</button>
     </form>
+      
 </div>
+
+<script>
+    $(document).ready(function () {
+        $('#callCreateChoice').click(function (e) {
+            var idQuestion = $('#inputFormId').val();
+            console.log("idQuestion :", idQuestion);
+
+            $.get('/Choice/CreateChoice', { idQuestion }, function (data) {
+                $('#divCreateChoice').html(data); // Mettre à jour le contenu de la div avec le contenu HTML reçu dans la réponse de la requête GET
+            });
+            e.preventDefault(); // Empêcher le comportement par défaut du bouton
+        });
+    });
+</script>
