--- a/PIRESQuestions/PIRESQuestions/Views/Shared/_createQuestion.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Shared/_createQuestion.cshtml
@@ -13,7 +13,18 @@
             <input type="text" asp-for="Description" class="form-control" id="inputDescription" placeholder="Saisissez la description...">
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
-        <button id="callCreateChoice" class="btn btn-info">Ajouter Choix</button>
+        <div class="col-md-3 mb-3">
+            
+                @foreach (var choice in ViewBag.ChoixPossibles)
+            {
+                <div class="col-md-3 mb-3">
+                    <label>@choice.Label</label>
+                    <input type="checkbox" value="@choice.Id">
+                </div>
+                }
+            
+            
+        </div>
         @if (Model != null)
         {
             <div id="divCreateChoice">
