--- a/PIRESQuestions/PIRESQuestions/Views/Shared/_createQuestion.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Shared/_createQuestion.cshtml
@@ -2,50 +2,54 @@
 
 <div class="container">
     <form asp-action="CreateQuestion" asp-controller="Question" id="formCreateQuestion">
-        <input type="text" asp-for="FormId" id="inputFormId"/>
-        <div class="col-md-3 mb-3">
+        <input type="text" asp-for="FormId" id="inputFormId" />
+        <div class="col-md-6 mb-3">
             <label asp-for="Label" class="form-label">Question :</label>
             <input type="text" asp-for="Label" class="form-control" id="inputLabel" placeholder="Saisissez la question...">
             <span asp-validation-for="Label" class="text-danger"></span>
         </div>
-        <div class="col-md-3 mb-3">
+        <div class="col-md-6 mb-3">
             <label asp-for="Description" class="form-label">Description :</label>
             <input type="text" asp-for="Description" class="form-control" id="inputDescription" placeholder="Saisissez la description...">
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
-        <div class="col-md-3 mb-3">
-            
-                @foreach (var choice in ViewBag.ChoixPossibles)
-            {
-                <div class="col-md-3 mb-3">
-                    <label>@choice.Label</label>
-                    <input type="checkbox" value="@choice.Id">
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                <div class="mb-3 form-check form-check-inline" >
+                    <input class="form-check-input" type="checkbox" value="1,2" id="YesNo">
+                    <label class="form-check-label">Yes/No</label>              
                 </div>
-                }
-            
-            
-        </div>
-        @if (Model != null)
-        {
-            <div id="divCreateChoice">
-                <partial name="_createChoice" model="Model.Choices" />
+                <div class="mb-3 form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" value="3" id="unconcerned">
+                    <label class="form-check-label">unconcerned</label>
+                </div>
+                <div class="mb-3 form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" value="4,5,6,7,8,9" id="NumCheck">
+                    <label class="form-check-label"> valeur 0 à 5 </label>
+                </div>
             </div>
-        }
-        <button class="btn btn-info">Envoyer</button>
+        </div> 
+        <button class="btn btn-success">Envoyer</button>
     </form>
-      
 </div>
 
 <script>
-    $(document).ready(function () {
-        $('#callCreateChoice').click(function (e) {
-            var idQuestion = $('#inputFormId').val();
-            console.log("idQuestion :", idQuestion);
+    // Ajouter des écouteurs d'événements pour les cases à cocher "YesNo" et "numCheck"
+    var yesNoCheckbox = document.querySelector('#YesNo');
+    var numCheckbox = document.querySelector('#NumCheck');
+    yesNoCheckbox.addEventListener('change', numCheckBoxDisabled);
+    numCheckbox.addEventListener('change', YesNoCheckBoxDisabled);
 
-            $.get('/Choice/CreateChoice', { idQuestion }, function (data) {
-                $('#divCreateChoice').html(data); // Mettre à jour le contenu de la div avec le contenu HTML reçu dans la réponse de la requête GET
-            });
-            e.preventDefault(); // Empêcher le comportement par défaut du bouton
-        });
-    });
+    function numCheckBoxDisabled(event) {
+        var numCheckbox = document.querySelector('#NumCheck');
+        var yesNoCheckbox = document.querySelector('#YesNo');
+        numCheckbox.disabled = event.target.checked; 
+    }
+
+    function YesNoCheckBoxDisabled(event) {
+        var numCheckbox = document.querySelector('#NumCheck');
+        var yesNoCheckbox = document.querySelector('#YesNo');
+        yesNoCheckbox.disabled = event.target.checked;
+    }
+
 </script>
