--- a/PIRESQuestions/PIRESQuestions/Views/Shared/_showQuestion.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Shared/_showQuestion.cshtml
@@ -3,7 +3,7 @@
     <div class="card mb-5">
         <div class="card-body">
             <input type="text" asp-for="@Model.Id" id="inputQuestionId" />
-        <p class="card-text strong">formulaire : @Model.Form.Title</p>
+        @* <p class="card-text strong">formulaire : @Model.Form.Title</p> *@
         <p class="card-text">@Model.Label</p>
         <p class="card-text">description : @Model.Description</p>
         <button onclick="return confirm('es-tu sûr ?') && deleteQuestion(@Model.Id, @Model.FormId);" class="btn btn-danger">Supprimer Via Ajax</button>
