--- a/PIRESQuestions/PIRESQuestions/Views/Form/Detail.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Form/Detail.cshtml
@@ -1,7 +1,81 @@
 ﻿@model Form
-<div> 
-    <partial name="_showForm" model="@Model" />
-    <a type="button" class="btn btn-warning" asp-action="Edit" asp-route-Id="@Model.Id">Editer le formulaire</a>
-    <a type="button" class="btn btn-warning" asp-action="AddQuestion" asp-route-Id="@Model.Id">Ajouter une question</a>
-    <a type="button" class="btn btn-danger" asp-action="Delete" asp-route-Id="@Model.Id">Supprimer le formiualire</a>
+
+<div id="contentAddQuestion" hidden>
+    <partial name="_createQuestion" model="new Question{FormId=Model.Id}" />
+
 </div>
+
+<div id="divContentForm">
+    <partial name="_showForm" model="@Model" />
+
+</div>
+
+@{
+    if (Model.Status.Label == "In progress")
+    {
+        <a type="button" class="btn btn-warning" asp-action="Edit" asp-route-Id="@Model.Id">Editer le formulaire</a>
+    }
+}
+
+<a type="button" class="btn btn-danger" asp-action="Delete" asp-route-Id="@Model.Id">Supprimer le formiualire</a>
+@{
+    if (Model.Status.Label == "In progress")
+    {
+        <a type="submit" asp-action="Validate" asp-controller="Form" asp-route-Id="@Model.Id" method="post" class="btn btn-primary">Validate</a>
+    }
+    if (Model.Status.Label == "Validated")
+    {
+        <a type="submit" asp-action="Close" asp-controller="Form" asp-route-Id=" @Model.Id" method="post" class="btn btn-primary">Close</a>
+    }
+}
+<script>
+    $(function () {
+        $('#formCreateQuestion').submit(function (e) {
+            var listChoices = [];
+
+            // Parcourez toutes les cases à cocher cochées
+            $('.form-check-input:checked').each(function () {
+                var values = $(this).val().split(","); // Séparez les valeurs par la virgule
+                for (var i = 0; i < values.length; i++) {
+                    var value = values[i].trim(); // Supprimez les espaces inutiles
+                    var intValue = parseInt(value);
+                    if (!isNaN(intValue) && !listChoices.includes(intValue)) {
+                        listChoices.push(intValue)
+                    }
+                }
+            });
+            var question = {
+                Label: $('#inputLabel').val(),
+                FormId: $('#inputFormId').val(),
+            };
+
+            console.log("question : " + listChoices[1]);
+
+            $.post('/Question/CreateQuestion', { question: question, choiceIds: listChoices }, function (data) {
+                $('#divContentForm').html(data);
+            });
+            e.preventDefault();
+        });
+    });
+
+    function deleteQuestion(id, formId) {
+
+        $.get('/Question/DeleteQuestion', { id, formId }, function (data) {
+            $('#divContentForm').html(data);
+            // window.location.href = '/Question/Index';
+        });
+    }
+
+    var addQbutton = document.querySelector('#addQuestionButton');
+    addQbutton.addEventListener('click', hideShowAddQuestion);
+
+    var sendbutton = document.querySelector('#sendQuestionButton');
+    sendbutton.addEventListener('click', hideShowAddQuestion);
+
+    function hideShowAddQuestion() {
+        var divAddQ = document.querySelector('#contentAddQuestion');
+        divAddQ.hidden = !divAddQ.hidden;
+
+    }
+
+</script>
