--- a/PIRESQuestions/PIRESQuestions/Views/Form/Index.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Form/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<Form>
-<h1> Forulaires</h1>
+<h1> Formulaires</h1>
 
 <div id="divContentForms">
     <partial name="_displayForms" model="Model" />
