--- a/PIRESQuestions/PIRESQuestions/Views/Shared/_createQuestion.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Shared/_createQuestion.cshtml
@@ -30,6 +30,7 @@
             </div>
         </div> 
         <button id="sendQuestionButton" class="btn btn-success">Envoyer</button>
+        <button id="cancelQuestionButton" class="btn btn-danger">Annuler</button>
     </form>
 </div>
 
